--- a/test/fixtures/blocks.yml
+++ b/test/fixtures/blocks.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  is_private: false
+private:
+  language: other
+  is_private: true
+  signature: 435Ryo5W2R0y65Q5etcMLw==
 
-two:
+public:
+  language: rails
   is_private: false
+  signature: wqYRrQ+Gi0cS9XfOLL62Tw==
